sfdx-source/force-app/main/default/objects/Custom_Amendment_Field_Mapping__mdt/Custom_Amendment_Field_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>Custom Amendment Field Mapping</label>
    <pluralLabel>Custom Amendment Field Mappings</pluralLabel>
</CustomObject>