sfdx-source/force-app/main/default/objects/Custom_Amendment_Field_Mapping__mdt/fields/Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_API_Name__c</fullName>
    <description>The main object field that needs to be Set with Source or Fixed value</description>
    <label>Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>