sfdx-source/force-app/main/default/objects/Custom_Amendment_Field_Mapping__mdt/fields/Mapping_Type__c.field-meta.xml
<CustomField>
    <fullName>Mapping_Type__c</fullName>
    <label>Mapping Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>