sfdx-source/force-app/main/default/objects/Custom_Amendment_Field_Mapping__mdt/fields/sObject_Type__c.field-meta.xml
<CustomField>
    <fullName>sObject_Type__c</fullName>
    <description>The main object we are using for creating</description>
    <inlineHelpText>The main object we are using for creating</inlineHelpText>
    <label>sObject Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>