sfdx-source/force-app/main/default/objects/Custom_Amendment_Field_Mapping__mdt/fields/Source_Field__c.field-meta.xml
<CustomField>
    <fullName>Source_Field__c</fullName>
    <description>The Source Object Field to be queried for getting the Data</description>
    <inlineHelpText>The Source Object Field to be queried for getting the Data</inlineHelpText>
    <label>Source Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>