sfdx-source/force-app/main/default/objects/Custom_Amendment_Field_Mapping__mdt/fields/Source_Object__c.field-meta.xml
<CustomField>
    <fullName>Source_Object__c</fullName>
    <inlineHelpText>The Source Object API name from which we want to Copy Data</inlineHelpText>
    <label>Source Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>