sfdx-source/force-app/main/default/objects/Custom_Amendment_Field_Mapping__mdt/fields/Type_of_Mapping__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Mapping__c</fullName>
    <label>Type of Mapping</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Copy from Source</fullName>
                <default>true</default>
                <label>Copy from Source</label>
            </value>
            <value>
                <fullName>Fixed Value</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>