sfdx-source/force-app/main/default/objects/Custom_Amendment_Field_Mapping__mdt/listViews/Active_Mappings.listView-meta.xml
<ListView>
    <fullName>Active_Mappings</fullName>
    <columns>MasterLabel</columns>
    <columns>sObject_Type__c</columns>
    <columns>Field_API_Name__c</columns>
    <columns>Source_Object__c</columns>
    <columns>Source_Field__c</columns>
    <columns>Type_of_Mapping__c</columns>
    <columns>Static_Value__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Type_of_Mapping__c</field>
        <operation>equals</operation>
        <value>Copy from Source,Fixed Value</value>
    </filters>
    <label>Active Mappings</label>
</ListView>